--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,7 @@ spring.datasource.password=zerobase
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
+spring.mvc.view.suffix=.html
 
 server.servlet.context-path=/
 server.servlet.encoding.charset=UTF-8
